# agentlog

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.adw/adw_modules/: agent.py  data_types.py  state.py  utils.py
.adw/travis/: travis_build.py  travis_document.py  travis_plan.py  travis_research.py  travis_review.py  travis_sdlc.py  travis_state.py  travis_test.py  travis_validate.py
.claude/commands/: document.md  feature.md  implement.md  research.md  resolve_failed_test.md  resolve_validation_violation.md  review.md  test.md  validate.md
ai_docs/research/: 0241d756-tail-sdk-sidecar-analysis.md  07ec0bb6-ls-unified-view-analysis.md  1b4319ab-init-uninstall-cli-analysis.md  355ec9b6-cost-rollup-analysis.md  408ef453-docs-pages-research.md  cb153ac3-view-tui-analysis.md  fabf1d0d-hook-handlers-capture-analysis.md
docs/: adw-lessons.md  architecture.md  blog-draft.md  cli-reference.md  feature-0241d756-tail-sdk-sidecar.md  feature-07ec0bb6-ls-unified-view.md  feature-1b4319ab-init-uninstall-hooks.md  feature-355ec9b6-cost-rollup.md  feature-cb153ac3-view-tui.md  feature-fabf1d0d-hook-handlers-capture.md  getting-started.md
research/: ai_dev_pain_points_2026.md  langgraph_patterns_2026.md
specs/: feature-0241d756-tail-sdk-sidecar.md  feature-07ec0bb6-ls-unified-view.md  feature-1b4319ab-init-uninstall-hooks.md  feature-355ec9b6-cost-rollup.md  feature-408ef453-docs-pages.md  feature-cb153ac3-view-tui.md  feature-fabf1d0d-hook-handlers-capture.md
specs/review_issues/: review-07ec0bb6.md  review-1b4319ab.md  review-355ec9b6.md  review-408ef453.md  review-cb153ac3.md  review-fabf1d0d.md
src/agentlog/: __init__.py  __main__.py  _constants.py  capture.py  cli.py  cost.py  hooks_install.py  ls.py  tail.py  view.py
tests/: test_capture.py  test_cli_smoke.py  test_cost.py  test_handler_perf.py  test_hooks_install.py  test_ls.py  test_tail.py  test_view.py
tests/fixtures/: sdk_minimal.jsonl
